# gpt-ui

./: .drone.yml  Dockerfile  README.md
backend/: .gitignore  Cargo.toml
backend/src/: api.rs  error.rs  main.rs
frontend/: .gitignore  .pnp.cjs  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: chat.ts  common.ts  index.ts
frontend/src/router/: index.ts
frontend/src/store/: key.ts  prompt.ts
frontend/src/views/: Setting.vue  Welcome.vue
