[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6"
async-openai = "0.9.2"
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.10.0"
